fix git fetch and push failed

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 FROM oven/bun
 
 RUN apt-get update \
-    && apt-get -y install --no-install-recommends git
+    && apt-get -y install --no-install-recommends ca-certificates git
 
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
